--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="main.css">
   <link href='https://fonts.googleapis.com/css?family=Lato:200,300,400,700' rel='stylesheet' type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Muli:200,300" rel="stylesheet">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="" alt="Profile Picture">
+					<img class="profile-pic" src="profil.jpeg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Kırklareli Üniverstesi Yazılım Mühendisliği Bölümü</p>
 				</div>
 				<div class="col">
-					<img src="" alt="Company Logo">
+					<img src="logo.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
