--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">KIRKLARELİ ÜNİVERSİTESİ MÜHENDİSLİK FAKÜLTESİ Cumhuriyet Mah. Üniversite Bulvarı Merkez Amfi Derslikler-2 No=39L 
-							Kayalı (Merkez) Yerleşkesi, KIRKLARELİ</p>
+						<p class="text-detail">KIRKLARELİ ÜNİVERSİTESİ MÜHENDİSLİK FAKÜLTESİ Kayalı (Merkez) Yerleşkesi, KIRKLARELİ</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
