--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:bbeynek@gmail.com">
+		<a href="mailto:burakbeynek@klu.edu.tr">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">bbeynek@gmail.com</p>
+						<p class="text-detail">burakbeynek@klu.edu.tr</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
